Fix bug with overflow

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    overflow: scroll;
 }
 
 .header {
